# space-hakyll-template

./: .gitignore  LICENSE  README.md  about.md  aboutme.md  config.yaml  config.yml  index.html  site.hs  space-hakyll-template.cabal
assets/css/: main.css
includes/: comments.html  head.html  header-default.html  header-post.html  menu-search.html  tree-posts.html
posts/: 2016-02-10-sharding.md  2016-03-10-space.md  2016-12-12-welcome-to-hakyll-markdown.md
projects/: 2016-09-26-anaqram.md  2016-11-30-minruby.md
templates/: about.html  default.html  minimal.html  page.html  post.html  posts.html
